# LightOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  boot.asm  kernel.asm  kernel_entry.asm  x86-OS-Basics.md
kernel/: disk.c  disk.h  interrupt.asm  interrupt.c  interrupt.h  kernel.c  memory.c  memory.h  privilege.c  privilege.h  process.c  process.h  syscall.c  syscall.h
